welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday=true && vacation=false){
                   ^sleepIn:5: error: reassignment to val
	if (weekday = false && vacation = true || weekday = true && vacation = true || weekday = false && vacation = false){
                    ^sleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (weekday = false && vacation = true || weekday = true && vacation = true || weekday = false && vacation = false){
        ^