welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (weekday=true && vacation=false){
		return false
	}
	if (weekday = false && vacation = true || weekday = true && vacation = true || weekday = false && vacation = false){
		return true 
	}
}